# tutorial_bd_with_python

./: .gitignore  README.md  pyproject.toml  script.py
