[tool.poetry]
name = "tutorial-bd-with-python"
version = "0.1.0"
description = ""
authors = ["Gustavo Lourenco da Silva <gustavolsilva@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.36"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
